# solana-staker

./: .gitignore  Anchor.toml  README.md  package.json
keys_for_test/: beef_mint.json  stake_mint.json
programs/staker/: Cargo.toml
programs/staker/src/: lib.rs
scripts/: airdrop-beef.ts  config.ts  create-mints.ts
tests/: staker.ts  token_helper.ts  user.ts
